# pyrct2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_simple_oval.py  02_hill_coaster.py  03_steep_coaster.py  04_banked_turns.py  05_corkscrew_coaster.py  06_vertical_loop.py  07_log_flume.py  08_mini_railway.py  09_wide_sweeping_turns.py  10_using_valid_next.py  11_undo.py  12_on_ride_photo.py  README.md
pyrct2/: _entity.py  _peep.py  cli.py  client.py  connection.py  enums.py  errors.py  launcher.py  objects.py  paths.py  result.py  rides.py  scenarios.py
pyrct2/_generated/: __init__.py  actions.py  enums.py  objects.py  state.py
pyrct2/fixtures/: 256x256_fixture.park  test_scenario.park  test_scenario_all_flat_rides.park  test_scenario_with_guests.park
pyrct2/park/: __init__.py  _cheats.py  _climate.py  _finance.py  _guests.py  _marketing.py  _park.py  _paths.py  _research.py  _rides.py  _staff.py  _td6.py
pyrct2/world/: __init__.py  _slope.py  _tile.py  _world.py
tests/: conftest.py  test_cheats.py  test_finance.py  test_footprint.py  test_guests.py  test_objects.py  test_park.py  test_research.py  test_rides.py  test_slope.py  test_staff.py  test_stalls.py  test_tile.py  test_world.py
tests/park/: test_climate.py  test_footprint.py  test_guests.py  test_marketing.py  test_park.py  test_paths.py  test_rides.py  test_stalls.py  test_tracked_rides.py
tests/world/: test_world.py
