[project]
name = "pyrct2"
version = "0.1.0"
description = "Interact with OpenRCT2 from python!"
readme = "README.md"
authors = [
    { name = "Mauk Muller", email = "mauk@elnino.tech" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "click>=8.1",
]

[project.scripts]
pyrct2 = "pyrct2.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
