[project]
name = "pyrct2"
version = "0.2.0"
description = "Interact with OpenRCT2 from python!"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Mauk Muller", email = "mauk@elnino.tech" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "click>=8.1",
]

[project.scripts]
pyrct2 = "pyrct2.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
exclude = ["pyrct2/_generated"]
